src/objects/Time_sheet__c.object
<CustomObject>
    <description>PMO: Every project member fill in the timesheet and submit on Friday.</description>
    <fields>
        <fullName>Campany1__c</fullName>
        <formula>CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Rate__c</fullName>
        <description>User Daily Rate</description>
        <formula>CreatedBy.Daily_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>User Daily Rate</inlineHelpText>
        <label>Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <description>Workload(Day)*  Daily Rate</description>
        <formula>Workload_Days__c  *   CreatedBy.Daily_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Workload(Day)*  Daily Rate</inlineHelpText>
        <label>Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Trigger_Date__c</fullName>
        <label>Last Trigger Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Allowance__c</fullName>
        <label>Total Allowance</label>
        <summarizedField>Time_Sheet_Detail__c.allowance_shadow__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Offsite_Hours__c</fullName>
        <label>Total Offsite Hours</label>
        <summarizedField>Time_Sheet_Detail__c.Workload_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Sheet_Detail__c.On_Off_Site__c</field>
            <operation>equals</operation>
            <value>Off</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Onsite_Hours__c</fullName>
        <label>Total Onsite Hours</label>
        <summarizedField>Time_Sheet_Detail__c.Workload_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Sheet_Detail__c.On_Off_Site__c</field>
            <operation>equals</operation>
            <value>On</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Day1__c</fullName>
        <label>Week Day1</label>
        <summarizedField>Time_Sheet_Detail__c.Workload_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Sheet_Detail__c.Week_Day__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Day2__c</fullName>
        <label>Week Day2</label>
        <summarizedField>Time_Sheet_Detail__c.Workload_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Sheet_Detail__c.Week_Day__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Day3__c</fullName>
        <label>Week Day3</label>
        <summarizedField>Time_Sheet_Detail__c.Workload_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Sheet_Detail__c.Week_Day__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workload_Amount__c</fullName>
        <label>Total Workload(Hrs.)</label>
        <summarizedField>Time_Sheet_Detail__c.Workload_Hrs__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workload_Days__c</fullName>
        <description>(Workload_Amount__c )/8</description>
        <formula>(Workload_Amount__c )/8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Workload/8</inlineHelpText>
        <label>Workload(Days.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Workload_Amount__c</columns>
        <columns>Workload_Days__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Workload_Amount__c</columns>
        <columns>Workload_Days__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Timesheets</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Time sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>no_more_8hours</fullName>
        <active>false</active>
        <errorConditionFormula>OR(Week_Day1__c &gt;8,Week_Day2__c &gt; 8 ,Week_Day3__c &gt; 8,Week_Day4__c  &gt; 8 ,Week_Day5__c &gt; 8)</errorConditionFormula>
        <errorMessage>No More Than 8 Hours Per Day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>working_hours</fullName>
        <active>false</active>
        <description>no more 40 hours per week</description>
        <errorConditionFormula>Workload_Amount__c &gt;40</errorConditionFormula>
        <errorMessage>no more 40 hours per week</errorMessage>
    </validationRules>
</CustomObject>